force-app/main/default/objects/Apod__c/Apod__c.object-meta.xml
<CustomObject>
    <description>Astronomy Picture of the Day.</description>
    <label>Apod</label>
    <nameField>
        <label>Apod Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>