force-app/main/default/objects/Apod__c/fields/Apod_Date__c.field-meta.xml
<CustomField>
    <fullName>Apod_Date__c</fullName>
    <formula>TEXT(YEAR(Date__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(Date__c)) &amp; &quot;-&quot; &amp; TEXT(DAY(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apod_Date</label>
    <type>Text</type>
</CustomField>