force-app/main/default/objects/Apod__c/fields/ApodID__c.field-meta.xml
<CustomField>
    <fullName>ApodID__c</fullName>
    <label>ApodID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>