force-app/main/default/objects/Apod__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <label>Copyright</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>