force-app/main/default/objects/Apod__c/fields/HDURL__c.field-meta.xml
<CustomField>
    <fullName>HDURL__c</fullName>
    <label>HDURL</label>
    <type>Url</type>
</CustomField>