force-app/main/default/objects/Apod__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>image</fullName>
            </value>
            <value>
                <fullName>video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>